# game-time-manager

./: .gitignore  LICENSE  README.md  old.rs.bak
service/: Cargo.toml  build.rs  game-time-manager.exe.manifest  gamer-gauge.exe.manifest
service/src/: config.rs  config.toml  install.ps1  main.rs  monitor.rs  overlay.rs  system_provider.rs  uninstall.ps1  watcher.rs
