[package]
name = "game-time-monitor"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.27.2"
native-windows-gui = "1.0.8"
native-windows-derive = "1.0.3"
winapi = "0.3.9"
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }


[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Dwm", 
    "Win32_Graphics_Gdi"
]

[build-dependencies]
embed-manifest = "1.3.1"